@@ -1,3 +1,4 @@
+	* improve error handling in http gunzip
 	* fix debug logging for banning web seeds
 	* improve support for de-selected files in full allocation mode
 	* fix dht_bootstrap_alert being posted
